@@ -106,6 +106,7 @@ parameters:
 - added parameter <timing/reading> to add reading time to solving time
 - added parameter <constraints/quadratic/binreforminitial> to indicate whether constraints added due to reformulation of products with binary variables in
   a quadratic constraints should be initial (if the quadratic constraint is initial), default is FALSE
+- renamed parameter <constraints/quadratic/linearizenlpsol> to <constraints/quadratic/linearizeheursol> and do linearizations in every solution found by some heuristic
 
 features:
 - flatzinc reader is now capable to read cumulative constraints
